-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 11.0.7-oracle, 14
-
Component/s: hotspot
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8235633 | 11.0.7-oracle | Vladimir Kozlov | P3 | Resolved | Fixed | b01 |
The -XX:+EnableJVMCIProduct option (added by JDK-8232118) currently sets the default values of EnableJVMCI and UseJVMCICompiler. If these options are also explicitly on the command line, these explicit values should take precedence. For example:
java -XX:+UnlockExperimentalVMOptions -XX:+EnableJVMCIProduct -XX:-UnlockExperimentalVMOptions -XX:-EnableJVMCI
should result in JVMCI being completely disabled. While this command line may look strange, it can occur when `-XX:+UnlockExperimentalVMOptions -XX:+EnableJVMCIProduct -XX:-UnlockExperimentalVMOptions` is on the command line due to use of the jlink --add-options flag. This is exactly what's done when creating a GraalVM binary.
Currently, the above command line results in a false error:
Improperly specified VM option UseJVMCICompiler: EnableJVMCI cannot be disabled
java -XX:+UnlockExperimentalVMOptions -XX:+EnableJVMCIProduct -XX:-UnlockExperimentalVMOptions -XX:-EnableJVMCI
should result in JVMCI being completely disabled. While this command line may look strange, it can occur when `-XX:+UnlockExperimentalVMOptions -XX:+EnableJVMCIProduct -XX:-UnlockExperimentalVMOptions` is on the command line due to use of the jlink --add-options flag. This is exactly what's done when creating a GraalVM binary.
Currently, the above command line results in a false error:
Improperly specified VM option UseJVMCICompiler: EnableJVMCI cannot be disabled
- backported by
-
JDK-8235633 [JVMCI] -XX:+EnableJVMCIProduct breaks -XX:-EnableJVMCI
-
- Resolved
-