8235539: [JVMCI] -XX:+EnableJVMCIProduct breaks -XX:-EnableJVMCI

Reviewed-by: kvn, thartmann