src/hotspot/share/jvmci/jvmci_globals.hpp
@@ -51,8 +51,8 @@ class fileStream;
   experimental(bool, EnableJVMCIProduct, false,                             \
           "Allow JVMCI to be used in product mode. This alters a subset of "\
           "JVMCI flags to be non-experimental, defaults UseJVMCICompiler "  \
-          "to true and defaults UseJVMCINativeLibrary to true if a JVMCI "  \
-          "native library is available.")                                   \
+          "and EnableJVMCI to true and defaults UseJVMCINativeLibrary "     \
+          "to true if a JVMCI native library is available.")                \
                                                                             \
   experimental(bool, UseJVMCICompiler, false,                               \
           "Use JVMCI as the default compiler. Defaults to true if "         \
@@ -122,7 +122,7 @@ class fileStream;
           "Execute JVMCI Java code from a shared library "                  \
           "instead of loading it from class files and executing it "        \
           "on the HotSpot heap. Defaults to true if EnableJVMCIProduct is " \
-          "true and a JVMCI native library is available.")\
+          "true and a JVMCI native library is available.")                  \
                                                                             \
   NOT_COMPILER2(diagnostic(bool, UseMultiplyToLenIntrinsic, false,          \
           "Enables intrinsification of BigInteger.multiplyToLen()"))        \
